--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,6 +13,7 @@
     <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description><![CDATA[
+A lightweight tool designed for developers to quickly generate Cron expressions within your IDE.
 <h3>Cron表达式生成插件</h3>
 <p>专为开发者设计的轻量级工具，帮助您在IDE中快速生成Cron表达式</p>
 
@@ -22,7 +23,7 @@
   <li><b>实时预览</b>：动态展示未来5次执行时间，确保调度逻辑准确</li>
 </ul>
 
-<small>无需切换浏览器，在IDE内高效管理您的定时任务</small>
+<p>无需切换浏览器，在IDE内高效管理您的定时任务</p>
 ]]></description>
 
     <!-- Product and plugin compatibility requirements.
